[package]
name = "battlesnake"
version = "0.1.0"
authors = ["Charlie Friend <charles.d.friend@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rouille = "^3.0.0"
serde = { version = "1.0.106", features = ["derive"] }
